--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.0 (September 2nd, 2014)
+- Updated plugin to work with MyBB 1.8
+
+## Version number reset for MyBB 1.8 ##
+
 2.0.3
 - Bug: Fixed language error for 1.6.11
 
